Preventing long pattern name from overflowing in pattern list selectors

--- a/sass/base.scss
+++ b/sass/base.scss
@@ -65,6 +65,7 @@
 .overflow-auto     { overflow: auto; }
 .overflow-hidden-x { overflow-x: hidden; }
 .overflow-scroll-x { overflow-x: scroll; }
+.overflow-ellipsis { text-overflow: ellipsis; }
 
 .border-box { box-sizing: border-box; }
 
